# new_media_player

./: .gitignore  Cargo.toml  PROJECT_STATE.md  README.md  package-lock.json  package.json
src/: index.html  options.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: default.toml
src-tauri/src/: commands.rs  lib.rs  main.rs  mpv.rs  state.rs
src/js/: edit-mode.js  main.js  options.js  player.js  ui.js
src/styles/: main.css  options.css
