[package]
name = "nova-player"
version = "0.1.0"
edition = "2021"
description = "Nova Player - A modern media player"
authors = ["Nova Player Team"]

[lib]
name = "nova_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "nova-player"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
libmpv2 = "6"
log = "0.4"
env_logger = "0.11"


